--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
    <title>Shopping Cart</title>
    <meta charset="utf-8">
@@ -13,72 +12,78 @@
 
 <body>
 
-   <section>
-      <div class="container mt-5">
-         <h2>My shopping cart</h2>
-         <div class="cart">
-            <div class="col-md-12 col-lg-10 mx-auto">
-               <div class="cart-item">
-                  <div class="row">
-                     <div class="col-md-7 center-item">
-                        <img src="images/product-1.png" alt="">
-                        <h5>iPhone 11 128GB Black</h5>
+<section>
+   <div class="container mt-5">
+      <!-- Title area-->
+      <h2>My shopping cart</h2>
+      <!-- Cart area -->
+      <div class="cart">
+         <div class="col-md-12 col-lg-10 mx-auto">
+            <div class="cart-item">
+               <div class="row">
+                  <!-- left area -->
+                  <div class="col-md-7 center-item">
+                     <img src="images/product-1.png" alt="">
+                     <h5>iPhone 11 128GB Black</h5>
+                  </div>
+                  <!-- right area -->
+                  <div class="col-md-5 center-item">
+                     <div class="input-group number-spinner">
+                        <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                        <input type="number" min="0" class="form-control text-center" value="1">
+                        <button class="btn btn-default"><i class="fas fa-plus"></i></button>
                      </div>
-
-                     <div class="col-md-5 center-item">
-                        <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
-                        </div>
-                        <h5>$1219</h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
-                     </div>
+                     <h5>$1219</h5>
+                     <img src="images/remove.png" alt="" class="remove-item">
                   </div>
                </div>
+            </div>
 
-               <div class="cart-item">
-                  <div class="row">
-                     <div class="col-md-7 center-item mx-auto">
-                        <img src="images/product-2.png" alt="">
-                        <h5>iPhone 11 Silicone Case - Black</h5>
+            <div class="cart-item">
+               <div class="row">
+                  <!-- left area -->
+                  <div class="col-md-7 center-item mx-auto">
+                     <img src="images/product-2.png" alt="">
+                     <h5>iPhone 11 Silicone Case - Black</h5>
+                  </div>
+                  <!-- right area -->
+                  <div class="col-md-5 center-item">
+                     <div class="input-group number-spinner">
+                        <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                        <input type="number" min="0" class="form-control text-center" value="1">
+                        <button class="btn btn-default"><i class="fas fa-plus"></i></button>
                      </div>
-                     <div class="col-md-5 center-item">
-                        <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
-
-                        </div>
-                        <h5>$59</h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
-                     </div>
+                     <h5>$59</h5>
+                     <img src="images/remove.png" alt="" class="remove-item">
                   </div>
                </div>
+            </div>
 
-               <div class="cart-item">
-                  <div class="row">
-
-                     <div class="col-md-8">
-                        <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
-                        <h5>Total:</h5>
-                     </div>
-
-                     <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
-                     </div>
+            <div class="cart-item">
+               <div class="row">
+                  <!-- Text area -->
+                  <div class="col-md-8">
+                     <h5>Subtotal: </h5>
+                     <h5>Tax:</h5>
+                     <h5>Total:</h5>
+                  </div>
+                  <!-- Price area -->
+                  <div class="col-md-4 status">
+                     <h5>$1,278</h5>
+                     <h5>$0</h5>
+                     <h5>$1,278</h5>
                   </div>
                </div>
-               <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" class="btn btn-success check-out">Check Out</button>
-               </div>
+            </div>
+            <!-- Checkout button -->
+            <div class="col-md-12 pt-4 pb-4">
+               <button type="button" class="btn btn-success check-out">Check Out</button>
             </div>
          </div>
       </div>
-   </section>
-</body>
+   </div>
+</section>
 
+<script src="app.js"></script>
+</body>
 </html>
