--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Shopping Cart</title>
+   <title>Js Shopping Cart</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,6 +19,7 @@
       <!-- Cart area -->
       <div class="cart">
          <div class="col-md-12 col-lg-10 mx-auto">
+            <!-- Phone -->
             <div class="cart-item">
                <div class="row">
                   <!-- left area -->
@@ -29,16 +30,16 @@
                   <!-- right area -->
                   <div class="col-md-5 center-item">
                      <div class="input-group number-spinner">
-                        <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                        <input type="number" min="0" class="form-control text-center" value="1">
-                        <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                        <button id="phone-minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                        <input id="phone-quantity" type="number" min="0" class="form-control text-center" value="1">
+                        <button id="phone-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                      </div>
                      <h5>$1219</h5>
                      <img src="images/remove.png" alt="" class="remove-item">
                   </div>
                </div>
             </div>
-
+            <!-- Case -->
             <div class="cart-item">
                <div class="row">
                   <!-- left area -->
